--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1",
-    "jquery": "^3.2",
+    "jquery": "^3.4.0",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.5",
     "popper.js": "^1.12",
@@ -21,5 +21,9 @@
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "laravel-echo": "^1.5.3",
+    "pusher-js": "^4.4.0"
   }
 }
