--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "laravel-echo": "^1.5.3",
-    "pusher-js": "^4.4.0"
+    "pusher-js": "^4.4.0",
+    "moment": "^2.24.0",
+    "tempusdominus-bootstrap-4": "^5.1.2"
   }
 }
